src/objects/DW_Account__c.object
<CustomObject>
    <description>Object to store information about DriveWealth Accounts</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>DriveWealth Account ID</description>
        <externalId>true</externalId>
        <inlineHelpText>DriveWealth Account ID</inlineHelpText>
        <label>Account ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>DriveWealth accountType; 1 - Practice or 2 - Live.</description>
        <inlineHelpText>DriveWealth accountType; 1 - Practice or 2 - Live.</inlineHelpText>
        <label>Account Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Salesforce Account this DriveWealth account belongs to</description>
        <inlineHelpText>Salesforce Account this DriveWealth account belongs to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DW Accounts</relationshipLabel>
        <relationshipName>DW_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_When__c</fullName>
        <label>Created When</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_When__c</fullName>
        <label>Opened When</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DW Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DW Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>